--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             font-family: Arial, sans-serif;
         }
         #game-container {
-            border: 2px solid #333;
-            box-shadow: 0 0 20px rgba(0,255,0,0.3);
+            width: 100vw;
+            height: 100vh;
+            border: none;
         }
         .loading {
             color: #0f0;
